--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "node-stratum-portal",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "Node quick start example portal",
     "main": "init.js",
     "dependencies": {
-        "stratum-pool": "*",
+        "stratum-pool": "zone117x/node-stratum",
         "dateformat": "*",
         "node-json-minify": "*"
     },
