Added clustering and moved blocknotify from stratum module to portal

--- a/config.json
+++ b/config.json
@@ -1,6 +1,10 @@
 {
+    "clustering": {
+        "enabled": true,
+        "forks": "auto"
+    },
     "blockNotifyListener": {
-        "enabled": false,
+        "enabled": true,
         "port": 8117,
         "password": "test"
     }
