Started work on share processing. Added redis dependency.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "stratum-pool": "zone117x/node-stratum",
         "dateformat": "*",
         "node-json-minify": "*",
-        "posix": "*"
+        "posix": "*",
+        "redis": "*"
     },
     "devDependencies": {},
     "scripts": {
