--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "dateformat": "*",
         "node-json-minify": "*",
         "posix": "*",
-        "redis": "*"
+        "redis": "*",
+        "mysql": "felixge/node-mysql",
     },
     "devDependencies": {},
     "scripts": {
