Added support for multiple ports with their own diffs and vardiff

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "node-json-minify": "*",
         "posix": "*",
         "redis": "*",
-        "mysql": "felixge/node-mysql",
+        "mysql": "felixge/node-mysql"
     },
     "devDependencies": {},
     "scripts": {
