--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
     "name": "node-stratum-portal",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "description": "Node quick start example portal",
     "main": "init.js",
     "dependencies": {
-        "stratum-pool": "zone117x/node-stratum",
+
+        "stratum-pool": "https://github.com/zone117x/node-stratum/archive/master.tar.gz",
         "dateformat": "*",
         "node-json-minify": "*",
         "posix": "*",
         "redis": "*",
-        "mysql": "felixge/node-mysql"
+        "mysql": "https://github.com/felixge/node-mysql/archive/master.tar.gz"
     },
     "devDependencies": {},
     "scripts": {
