--- a/package.json
+++ b/package.json
@@ -1,34 +1,44 @@
 {
-    "name": "node-stratum-portal",
+    "name": "node-open-mining-portal",
     "version": "0.0.3",
-    "description": "Node quick start example portal",
+    "description": "An extremely efficient, highly scalable, all-in-one, easy to setup cryptocurrency mining pool",
+    "keywords": [
+        "stratum",
+        "mining",
+        "pool",
+        "server",
+        "poolserver",
+        "bitcoin",
+        "litecoin",
+        "scrypt"
+    ],
+    "homepage": "https://github.com/zone117x/node-open-mining-portal",
+    "bugs": {
+        "url": "https://github.com/zone117x/node-open-mining-portal/issues"
+    },
+    "license": "GPL-2.0",
+    "author": "Matthew Little",
+    "contributors": [
+        "vekexasia",
+        "TheSeven"
+    ],
     "main": "init.js",
+    "bin": {
+        "block-notify": "./scripts/blockNotify.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/zone117x/node-open-mining-portal.git"
+    },
     "dependencies": {
         "stratum-pool": "https://github.com/zone117x/node-stratum/archive/master.tar.gz",
         "dateformat": "*",
         "node-json-minify": "*",
         "posix": "*",
         "redis": "*",
-        "mysql": "https://github.com/felixge/node-mysql/archive/master.tar.gz"
+        "mysql": "*"
     },
-    "devDependencies": {},
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/zone117x/node-stratum-portal.git"
-    },
-    "keywords": [
-        "node",
-        "stratum",
-        "pool",
-        "mining"
-    ],
-    "author": "zone117x",
-    "license": "GPL",
-    "bugs": {
-        "url": "https://github.com/zone117x/node-stratum-portal/issues"
-    },
-    "homepage": "https://github.com/zone117x/node-stratum-portal"
+    "engines": {
+        "node": ">=0.10"
+    }
 }
