Added a bit of coins :)

--- a/coins/flappycoin.json
+++ b/coins/flappycoin.json
@@ -1,6 +1,6 @@
 {
-    "name"       : "litecoin",
-    "symbol"     : "LTC",
+    "name"       : "flappycoin",
+    "symbol"     : "FLAP",
     "algorithm"  : "scrypt",
     "reward"     : "POW",
     "txMessages" : false
