Capitalizing is better :)

--- a/coins/flappycoin.json
+++ b/coins/flappycoin.json
@@ -1,5 +1,5 @@
 {
-    "name"       : "flappycoin",
+    "name"       : "Flappycoin",
     "symbol"     : "FLAP",
     "algorithm"  : "scrypt",
     "reward"     : "POW",
