Work on payment processing

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "node-json-minify": "*",
         "posix": "*",
         "redis": "*",
-        "mysql": "*"
+        "mysql": "*",
+        "async": "*"
     },
     "engines": {
         "node": ">=0.10"
