--- a/config.json
+++ b/config.json
@@ -20,7 +20,8 @@
         "enabled": true,
         "siteTitle": "Cryppit",
         "port": 80,
-        "statUpdateInterval": 5
+        "statUpdateInterval": 5,
+        "hashrateWindow": 600
     },
     "proxy": {
         "enabled": false,
