Betting logging. Payment processing fixes.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
         "mysql": "*",
         "async": "*",
         "express": "*",
-        "dot": "*"
+        "dot": "*",
+        "colors": "*"
     },
     "engines": {
         "node": ">=0.10"
