Added recursive watch so web development is easier.

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
         "async": "*",
         "express": "*",
         "dot": "*",
-        "colors": "*"
+        "colors": "*",
+        "node-watch": "*"
     },
     "engines": {
         "node": ">=0.10"
