Removed txMessages: false because its already false by default. Fixed ultracoin timestamp

--- a/coins/flappycoin.json
+++ b/coins/flappycoin.json
@@ -1,6 +1,5 @@
 {
-    "name"       : "Flappycoin",
-    "symbol"     : "FLAP",
-    "algorithm"  : "scrypt",
-    "txMessages" : false
+    "name": "Flappycoin",
+    "symbol": "FLAP",
+    "algorithm": "scrypt"
 }
