--- a/config_example.json
+++ b/config_example.json
@@ -23,39 +23,45 @@
         "statUpdateInterval": 1.5,
         "hashrateWindow": 300
     },
+	/* 
+	   In a proxy configuration, you can setup ports that accept miners for work based on 
+	   a specific algorithm instead of a specific coin.  Miners that connect to these ports
+	   are automatically switched a coin determined by the server.
+
+	   The default coin is the first configured pool for each algorithm and coin switching 
+	   can be triggered using the coinSwitch.js script in the scripts folder.
+
+	   Please note miner address authentication must be disabled when using NOMP in a proxy
+	   configuration and that payout processing is left up to the server administrator. 
+    */
     "proxy": {
-        "enabled": false,
-        "ports": {
-            "80": {
-                "diff": 32,
-                "varDiff": {
-                    "minDiff"         : 8,
-                    "maxDiff"         : 512,
-                    "targetTime"      : 15,
-                    "retargetTime"    : 90,
-                    "variancePercent" : 30
-                }
-            },
-            "6000": {
-                "diff": 32,
-                "varDiff": {
-                    "minDiff"         : 8,
-                    "maxDiff"         : 512,
-                    "targetTime"      : 15,
-                    "retargetTime"    : 90,
-                    "variancePercent" : 30
-                }
-            },
-            "8080": {
-                "diff": 32,
-                "varDiff": {
-                    "minDiff"         : 8,
-                    "maxDiff"         : 512,
-                    "targetTime"      : 15,
-                    "retargetTime"    : 90,
-                    "variancePercent" : 30
-                }
+        "sha256": {
+            "enabled": false,
+            "port": "3333",
+			"diff": 10,
+            "varDiff": {
+                "minDiff": 16, //Minimum difficulty
+                "maxDiff": 512, //Network difficulty will be used if it is lower than this
+                "targetTime": 15, //Try to get 1 share per this many seconds
+                "retargetTime": 90, //Check to see if we should retarget every this many seconds
+                "variancePercent": 30 //Allow time to very this % from target without retargeting
             }
+        },
+        "scrypt": {
+            "enabled": false,
+            "port": "4444",
+			"diff": 10,
+            "varDiff": {
+                "minDiff": 16, //Minimum difficulty
+                "maxDiff": 512, //Network difficulty will be used if it is lower than this
+                "targetTime": 15, //Try to get 1 share per this many seconds
+                "retargetTime": 90, //Check to see if we should retarget every this many seconds
+                "variancePercent": 30 //Allow time to very this % from target without retargeting
+            }
+        },
+        "scrypt-n": {
+            "enabled": false,
+            "port": "5555"
         }
     }
 }
