--- a/config_example.json
+++ b/config_example.json
@@ -70,9 +70,12 @@
     },
 
     "profitSwitch": {
-    	"enabled": false,
-        "updateInterval": 60,
-    	"depth": 0.80
+        "enabled": false,
+        "updateInterval": 600,
+        "depth": 0.90,
+        "usePoloniex": true,
+        "useCryptsy": true,
+        "useMintpal": true
     },
 
     "redisBlockNotifyListener": {
