--- a/config_example.json
+++ b/config_example.json
@@ -34,6 +34,7 @@
 
     "coinSwitchListener": {
         "enabled": false,
+        "host": "127.0.0.1",
         "port": 8118,
         "password": "test"
     },
