Replaced various listeners (coinswitch and blocknotify) with united NOMP CLI (command-line interface)

--- a/config_example.json
+++ b/config_example.json
@@ -1,6 +1,8 @@
 {
     "logLevel": "debug",
 
+    "cliPort": 17117,
+
     "clustering": {
         "enabled": true,
         "forks": "auto"
@@ -26,47 +28,47 @@
         "port": 6379
     },
 
-    "blockNotifyListener": {
-        "enabled": false,
-        "port": 8117,
-        "password": "test"
-    },
-
-    "coinSwitchListener": {
-        "enabled": false,
-        "host": "127.0.0.1",
-        "port": 8118,
-        "password": "test"
-    },
-
-    "proxy": {
-        "sha256": {
+    "switching": {
+        "switch1": {
             "enabled": false,
-            "port": "3333",
-            "diff": 10,
-            "varDiff": {
-                "minDiff": 16,
-                "maxDiff": 512,
-                "targetTime": 15,
-                "retargetTime": 90,
-                "variancePercent": 30
+            "algorithm": "sha256",
+            "ports": {
+                "3333": {
+                    "diff": 10,
+                    "varDiff": {
+                        "minDiff": 16,
+                        "maxDiff": 512,
+                        "targetTime": 15,
+                        "retargetTime": 90,
+                        "variancePercent": 30
+                    }
+                }
             }
         },
-        "scrypt": {
+        "switch2": {
             "enabled": false,
-            "port": "4444",
-            "diff": 10,
-            "varDiff": {
-                "minDiff": 16,
-                "maxDiff": 512,
-                "targetTime": 15,
-                "retargetTime": 90,
-                "variancePercent": 30
+            "algorithm": "scrypt",
+            "ports": {
+                "4444": {
+                    "diff": 10,
+                    "varDiff": {
+                        "minDiff": 16,
+                        "maxDiff": 512,
+                        "targetTime": 15,
+                        "retargetTime": 90,
+                        "variancePercent": 30
+                    }
+                }
             }
         },
-        "scrypt-n": {
+        "switch3": {
             "enabled": false,
-            "port": "5555"
+            "algorithm": "x11",
+            "ports": {
+                "5555": {
+                    "diff": 0.001
+                }
+            }
         }
     },
 
