--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
         "node-watch": "*",
         "request": "*",
         "nonce": "*",
-        "bignum": "*"
+        "bignum": "*",
+        "crypto": "*"
     },
     "engines": {
         "node": ">=0.10"
