--- a/config_example.json
+++ b/config_example.json
@@ -11,6 +11,7 @@
 
     "website": {
         "enabled": true,
+        "host": "0.0.0.0",
         "port": 80,
         "stratumHost": "cryppit.com",
         "stats": {
