--- a/coins/litecoinx.json
+++ b/coins/litecoinx.json
@@ -1,6 +1,6 @@
 {
     "name": "Litecoinx",
     "symbol": "LTCX",
-    "algorithm": "x11"
+    "algorithm": "x11",
     "mposDiffMultiplier": 256
 }
