Redis password authorization feature addon

--- a/config_example.json
+++ b/config_example.json
@@ -25,7 +25,8 @@
         },
         "redis": {
             "host": "127.0.0.1",
-            "port": 6379
+            "port": 6379,
+            "password": ""
         }
     },
 
@@ -47,7 +48,8 @@
 
     "redis": {
         "host": "127.0.0.1",
-        "port": 6379
+        "port": 6379,
+        "password": ""
     },
 
     "switching": {
