--- a/coins/infinitecoin.conf
+++ b/coins/infinitecoin.conf
@@ -1,5 +1,5 @@
 {
-    "name": "InfiniteCoin",
+    "name": "Infinitecoin",
     "symbol": "IFC",
     "algorithm": "scrypt",
     "peerMagic": "fbc0b6db",
