--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nonce": "*",
     "redis": "*",
     "request": "*",
+    "memcached": "*",
     "stratum-pool": "git://github.com/zone117x/node-stratum-pool.git"
   },
   "engines": {
