--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "node-json-minify": "*",
         "redis": "*",
         "mysql": "*",
-        "async": "*",
+        "async": "1.5.0",
         "express": "*",
         "body-parser": "*",
         "compression": "*",
