--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     },
     "dependencies": {
         "stratum-pool": "git://github.com/zone117x/node-stratum-pool.git",
-        "dateformat": "*",
+        "dateformat": "1.0.12",
         "node-json-minify": "*",
-        "redis": "*",
+        "redis": "0.12.1",
         "mysql": "*",
-        "async": "*",
+        "async": "1.5.2",
         "express": "*",
         "body-parser": "*",
         "compression": "*",
@@ -45,7 +45,7 @@
         "node-watch": "*",
         "request": "*",
         "nonce": "*",
-        "bignum": "*",
+        "bignum": "0.12.5",
         "extend": "*"
     },
     "engines": {
